--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,3 +27,9 @@ a {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+  .button{
+    @apply px-4 py-2 border-2 rounded-full hover:shadow-xl active:scale-95 cursor-pointer hover:bg-gray-100 transition transform duration-150 ease-out mb-3
+  }
+}
